--- a/imgui.ini
+++ b/imgui.ini
@@ -10,3 +10,19 @@ Size=291,111
 Pos=60,60
 Size=270,128
 
+[Window][Documents]
+Pos=0,19
+Size=200,781
+
+[Window][Reglages]
+Pos=1030,19
+Size=250,781
+
+[Window][Inspector]
+Pos=980,40
+Size=300,760
+
+[Window][Header]
+Pos=0,0
+Size=1280,40
+
